--- a/navbar.html
+++ b/navbar.html
@@ -27,6 +27,8 @@
         background-color: white;
         box-shadow: 0px 0px 3px gray;
         padding: 0px 30px;
+        position: fixed;
+        top: 0;
       }
       .logo {
         height: 40px;
