--- a/demoWebsite/index.html
+++ b/demoWebsite/index.html
@@ -49,13 +49,48 @@
                     aria-label="Enter Your Delivery Location"
                     aria-describedby="basic-addon2"
                   />
-                  <button class="btn btn-locateme mx-2">Locate Me</button>
+                  <button class="btn btn-locateme mx-2">
+                    <i class="bi bi-crosshair me-1"></i>Locate Me
+                  </button>
                   <span
                     class="input-group-text border-orange py-3 bg-orange fw-bold text-white rounded-0"
                     id="basic-addon2"
                     >find Food</span
                   >
                 </div>
+              </div>
+            </div>
+            <div class="row">
+              <!-- popular cities  -->
+              <div class="col">
+                <p class="text-body-secondary fs-6">POPULAR CITIES IN INDIA</p>
+                <ul
+                  class="list-unstyled d-flex gap-2 flex-wrap popular-cities-list"
+                >
+                  <li>
+                    <a href="" class="text-decoration-none">Ahemdabaad</a>
+                  </li>
+                  <li>
+                    <a href="" class="text-decoration-none">Hydrabaad</a>
+                  </li>
+                  <li>
+                    <a href="" class="text-decoration-none">Chennai</a>
+                  </li>
+                  <li>
+                    <a href="" class="text-decoration-none">Banglore</a>
+                  </li>
+                  <li>
+                    <a href="" class="text-decoration-none">Gurgaon</a>
+                  </li>
+                  <li>
+                    <a href="" class="text-decoration-none">Delhi</a>
+                  </li>
+                  <li>
+                    <a href="" class="text-decoration-none"
+                      >&amp; many more...</a
+                    >
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
