--- a/javascript/dom.html
+++ b/javascript/dom.html
@@ -43,7 +43,7 @@
       <div class="colorbox bg-purple" onclick="changeColor('purple')"></div>
       <div class="colorbox bg-green" onclick="changeColor('green')"></div>
     </div>
-
+    <h1 id="clock">clock will show here</h1>
     <script>
       //   const h1 = document.getElementsByTagName("h1");
 
@@ -58,6 +58,13 @@
       function changeColor(clr) {
         document.getElementById("data").style.color = clr;
       }
+      setInterval(() => {
+        let date = new Date();
+        // console.log("daldkl");
+        document.getElementById(
+          "clock"
+        ).innerHTML = `${date.getHours()} - ${date.getMinutes()} - ${date.getSeconds()}`;
+      }, 1000);
     </script>
   </body>
 </html>
